fixed spacing of buttons on bottom of spaces index page

--- a/app/assets/stylesheets/spaces_index.css.scss
+++ b/app/assets/stylesheets/spaces_index.css.scss
@@ -102,9 +102,11 @@ h4 a{
   background-color: darkgray;
   font-family: 'Alex Brush', cursive;
   font-size: 20px;
+  line-height: 45px;
   width: 49.5%;
   float: left;
   border-radius: 5px;
   text-align: center;
   margin: 2px;
+  margin-bottom: 50px;
 }
